==> lizhiok/FPInterro/Libraries/MDK_LIB/RL/CAN/Drivers/CAN_XMC4500.c <==
#include <RTL.h>                        /* RTX kernel functions & defines     */
#include <RTX_CAN.h>                    /* CAN Generic functions & defines    */
#include <XMC4500.h>
#define CAN_CLK               10000000
#define MAX_CTRL   3
#define MAX_CH    64

static BOOL CAN_set_timing (U32 ctrl, U32 brp, U32 tseg1, U32 tseg2) {
  CAN_NODE_TypeDef *CAN_NODEx = CAN_NODE[ctrl-1];
  U32 div8 = 0;
  U32 sjw;

  /* Check input parameters are in expected boundaries                        */
  if ((!brp)      || (brp     > 512)  || 
      (tseg1 < 2) || (tseg1   >  15)  || 
      (tseg2 < 1) || (tseg2   >   7))  {
    return (__FALSE);
  }

  /* Calculate other needed values                                            */
  sjw = ((1 + tseg1) < tseg2) ? (1 + tseg1) : (tseg2);
  if (sjw > 4)  sjw = 4;
  if (!sjw)     sjw = 1;

  if (brp > 64) {
    div8 = 1;
    brp /= 8;
  }

  CAN_NODEx->NBTR  =  0;                /* Clear Bit Timing Register          */
  CAN_NODEx->NBTR |= ( div8     << 15) |/* Configure Bit Timing Register      */
                     ((tseg2-1) << 12) |
                     ((tseg1-1) <<  8) |
                     ((sjw  -1) <<  6) |
                     ((brp  -1) <<  0) ;

  return (__TRUE);
}

CAN_ERROR CAN_hw_setup (U32 ctrl)  {
  CAN_NODE_TypeDef *CAN_NODEx = CAN_NODE[ctrl-1];
  static U32 clk_set = 0;

  if (ctrl > MAX_CTRL) 
    return CAN_UNEXIST_CTRL_ERROR;

  if (!clk_set) {                       /* Set clock to module only once      */
    SCU_RESET->PRCLR1 = 1 << 4;         /* MultiCAN Reset Clear               */
    CAN->CLC &= ~1;                     /* Enable Module                      */
    while (CAN->CLC & 2);               /* Wait until module is enabled       */
    CAN->FDR  =  0;                     /* Clear FDR                          */
    CAN->FDR |= (1 << 14) | (1012);     /* fCAN = fSYS / (1024 -1012) = 10 MHz*/
    clk_set   =  1;
  }

  /* It is necessary to set CCE bit prior selecting transmit/receive ports    */
  CAN_NODEx->NCR |=  (1 << 6);          /* Configuration Change Enable, CCE=1 */

  switch (ctrl) {
    case 1:
      #if USE_CAN_CTRL1 == 1

        /* Setup CAN0 pins                                                    */
        /* Possible pins: 
           CAN0_TXDC0  - P0.0, P1.4, P3.2, P3.10 
           CAN0_RXDC0A - P1.5
           CAN0_RXDC0B - P14.3
           CAN0_RXDC0C - P3.12                                                */

        /* Enable CAN0 interrupt                                              */
        NVIC_SetPriority (CAN0_1_IRQn, 1);
        NVIC_EnableIRQ   (CAN0_1_IRQn);
      #endif
      break;

    case 2: 
      #if USE_CAN_CTRL2 == 1
        /* Setup CAN1 pins                                                    */
        /* Possible pins: 
           CAN1_TXDC1  - P3.9, P2.7, P1.12, P1.5
           CAN1_RXDC1A - P2.6
           CAN1_RXDC1B - P3.11
           CAN1_RXDC1C - P1.13
           CAN1_RXDC1D - P1.4
           CAN1_RXDC1F - CAN0INS                                              */

        /* Enable CAN1 interrupt                                              */
        NVIC_SetPriority (CAN0_2_IRQn, 1);
        NVIC_EnableIRQ   (CAN0_2_IRQn);
      #endif
      break;

    case 3: 
      #if USE_CAN_CTRL3 == 1
        /* Setup CAN2 pins                                                    */
        /* Possible pins: 
           CAN2_TXDC2  - P3.7, P1.9, P4.7
           CAN2_RXDC2A - P1.8
           CAN2_RXDC2B - P3.8
           CAN2_RXDC2C - P4.6
           CAN2_RXDC2F - CAN1INS                                              */

        /* Setup P1.9 as CAN_TX pin                                           */
        PORT1->IOCR8  &=  ~(0xFFUL <<  8);  /* Clear P1.9 settings            */
        PORT1->IOCR8  |=   (0x12UL << 11);  /* P1.9 output ALT2 push-pull     */
        PORT1->PDR1   &=  ~(0x07UL << 4);   /* Clear P1.9 output settings     */
        PORT1->PDR1   |=   (0x02UL << 4);   /* P1.9 output strong             */

        /* Setup P1.8 as CAN_RX pin                                           */
        PORT1->IOCR8  &=  ~(0xFFUL << 0);   /* Clear P1.8 settings            */
        PORT1->IOCR8  |=   (0x00UL << 0);   /* P1.8 input no pull device      */
        CAN_NODEx->NPCR &= ~7;              /* Select CAN2_RXDC2A as CAN2_RX  */

        /* Enable CAN2 interrupt                                              */
        NVIC_SetPriority (CAN0_3_IRQn, 1);
        NVIC_EnableIRQ   (CAN0_3_IRQn);
      #endif
      break;
  }

  CAN_NODEx->NCR &= ~(1 << 6);          /* Configuration Change Disable, CCE=0*/

  return CAN_OK;
}

CAN_ERROR CAN_hw_init (U32 ctrl, U32 baudrate)  {
  CAN_NODE_TypeDef *CAN_NODEx = CAN_NODE[ctrl-1];

  if (ctrl > MAX_CTRL) 
    return CAN_UNEXIST_CTRL_ERROR;

  CAN_NODEx->NCR  |=  ((1 << 0) |       /* Node initialization, INIT = 1      */
                       (1 << 6));       /* Configuration Change Enable, CCE=1 */
  CAN_NODEx->NIPR &=  ~(7 << 8) ;       /* Clear TRINP field                  */
  CAN_NODEx->NIPR |=   (ctrl << 8);     /* Select INT_0(ctrl) for transfer int*/

  if (CAN_hw_set_baudrate(ctrl, baudrate) != CAN_OK)         /* Set baudrate  */
    return CAN_BAUDRATE_ERROR;

                                        /* Clear all message object bit masks */
  tx_mo [ctrl-1][0] = 0;
  tx_mo [ctrl-1][1] = 0;
  set_mo[ctrl-1][0] = 0;
  set_mo[ctrl-1][1] = 0;
  get_mo[ctrl-1][0] = 0;
  get_mo[ctrl-1][1] = 0;

  while (CAN->PANCTR & (1 << 8));       /* Wait for RAM init to finish        */

  CAN->MCR    &= ~(0x0F << 12);         /* MPSEL = 0000B - allocation case 1  */
  CAN->MSIMASK =   0xFFFFFFFF;          /* Enable all messages                */
  
  return CAN_OK;
}

CAN_ERROR CAN_hw_start (U32 ctrl)  {
  CAN_NODE_TypeDef *CAN_NODEx = CAN_NODE[ctrl-1];

  if (ctrl > MAX_CTRL) 
    return CAN_UNEXIST_CTRL_ERROR;

  CAN_NODEx->NCR &= ~((1 << 0) |        /* Node not in init, INIT = 0         */
                      (1 << 6));        /* Configuration Change Disable, CCE=0*/
  CAN_NODEx->NCR |=   (1 << 1) ;        /* Transmit Interrupt Enable, TRIE = 1*/

  return CAN_OK;
}

CAN_ERROR CAN_hw_testmode (U32 ctrl, U32 testmode) {
  CAN_NODE_TypeDef *CAN_NODEx = CAN_NODE[ctrl-1];

  /* NOTE: in this case test mode does not work on one node, so 1 node can not 
           send and receive it's own message only test mode could work between 
           different nodes in same conttroller                                */

  if (ctrl > MAX_CTRL) 
    return CAN_UNEXIST_CTRL_ERROR;

  CAN_NODEx->NPCR &= ~(            1  << 8);
  CAN_NODEx->NPCR |=  ((testmode & 1) << 8);

  return CAN_OK;
}

CAN_ERROR CAN_hw_wr (U32 ctrl, CAN_msg *msg)  {
  CAN_MO_TypeDef *CAN_MOx = CAN_MO[msg->ch-1];
  BOOL rmt;
  BOOL std;
  U8   mo_idx, msk;

  if (ctrl > MAX_CTRL) 
    return CAN_UNEXIST_CTRL_ERROR;

  if (msg->ch > MAX_CH) 
    return CAN_UNEXIST_CH_ERROR;

  rmt = (msg->type   == REMOTE_FRAME);
  std = (msg->format == STANDARD_FORMAT);

  /* Setup Message Object for transmission                                    */

  /* Setup the identifier information                                         */
  if (std)  {                                              /* Standard ID     */
    CAN_MOx->MOAMR = (2UL << 30) |             (U32)(msg->id << 18);
    CAN_MOx->MOAR  = (2UL << 30) |             (U32)(msg->id << 18);
  }  else  {                                               /* Extended ID     */
    CAN_MOx->MOAMR = (2UL << 30) | (1 << 29) | (U32)(msg->id);
    CAN_MOx->MOAR  = (2UL << 30) | (1 << 29) | (U32)(msg->id);
  }

  /* Setup data bytes                                                         */
  CAN_MOx->MODATAL = ((U32)msg->data[3] << 24) | 
                     ((U32)msg->data[2] << 16) | 
                     ((U32)msg->data[1] <<  8) | 
                     ((U32)msg->data[0]      ) ;
  CAN_MOx->MODATAH = ((U32)msg->data[7] << 24) | 
                     ((U32)msg->data[6] << 16) | 
                     ((U32)msg->data[5] <<  8) | 
                     ((U32)msg->data[4]      ) ;

  CAN_MOx->MOFCR   = (msg->len << 24) | /* DLC  = Data Length                 */
                    (( rmt) << 21) |    /* RMM  = 1 for Remote Monitoring     */
                    (( rmt) << 16) |    /* RXIE = 1 for DATA answer receive   */
                     (   1  << 17) |    /* TXIE = 1 -> Transmit Interrupt En  */
                     (   0  <<  0) ;    /* MMC  = 0 -> Standard Message Object*/

                                        /* Update object bit mask             */
  mo_idx = ((msg->ch-1) >> 5) & 1;
  msk    = (1 << ((msg->ch-1) & 0x1F));
  set_mo[ctrl-1][mo_idx] &=~msk;        /* It is not SET object               */
  if (rmt) 
    get_mo[ctrl-1][mo_idx] |=  msk;     /* If RTR tx requested then it's GET  */

  /* Activate transmission                                                    */
  CAN_MOx->MOCTR   = (    1  <<  6) |   /* Clear RTSEL                        */
                     ((!rmt) <<  7) |   /* Clear RXEN for DATA sending        */
                     (( rmt) << 11) |   /* Clear DIR for RTR sending          */
                     (    1  << 19) |   /* Set NEWDAT                         */
                     (    1  << 21) |   /* Set MSGVAL                         */
                     (( rmt) << 23) |   /* Set RXEN for RTR sending           */
                     (    1  << 24) |   /* Set TXRQ                           */
                     (    1  << 25) |   /* Set TXEN0                          */
                     (    1  << 26) |   /* Set TXEN1                          */
                     ((!rmt) << 27);    /* Set DIR for DATA sending           */

  return CAN_OK;
}

static void CAN_hw_rd (U32 ctrl, U32 ch, CAN_msg *msg)  {
  CAN_MO_TypeDef *CAN_MOx = CAN_MO[ch-1];

  /* Read identifier information                                              */
  if (!(CAN_MOx->MOAR & (1 << 29))) {                       /* Standard ID    */
    msg->format =  STANDARD_FORMAT;
    msg->id     =  0x000007FFUL & (CAN_MOx->MOAR >> 18);
  }  else  {                                                /* Extended ID    */
    msg->format =  EXTENDED_FORMAT;
    msg->id     =  0x1FFFFFFFUL & CAN_MOx->MOAR;
  }

  /* Read type information                                                    */
  msg->type     =  DATA_FRAME;                              /* DATA   FRAME   */

  /* Read length (number of received bytes)                                   */
  msg->len      = (CAN_MOx->MOFCR >> 24) & 0x0F;

  /* Read data bytes                                                          */
  msg->data[0]  = (CAN_MOx->MODATAL      );
  msg->data[1]  = (CAN_MOx->MODATAL >>  8);
  msg->data[2]  = (CAN_MOx->MODATAL >> 16);
  msg->data[3]  = (CAN_MOx->MODATAL >> 24);
  msg->data[4]  = (CAN_MOx->MODATAH      );
  msg->data[5]  = (CAN_MOx->MODATAH >>  8);
  msg->data[6]  = (CAN_MOx->MODATAH >> 16);
  msg->data[7]  = (CAN_MOx->MODATAH >> 24);

  CAN_MOx->MOCTR = (1 <<  3);           /* Reset NEWDAT                       */
}

CAN_ERROR CAN_hw_set (U32 ctrl, CAN_msg *msg)  {
  CAN_MO_TypeDef *CAN_MOx = CAN_MO[msg->ch-1];
  BOOL std;
  U8   mo_idx, msk;

  if (ctrl > MAX_CTRL) 
    return CAN_UNEXIST_CTRL_ERROR;

  if (msg->ch > MAX_CH) 
    return CAN_UNEXIST_CH_ERROR;

  std = (msg->format == STANDARD_FORMAT);

  /* Setup Message Object for transmission                                    */

  /* Setup the identifier information                                         */
  if (std)  {                                              /* Standard ID     */
    CAN_MOx->MOAMR = (2UL << 30) |             (U32)(msg->id << 18);
    CAN_MOx->MOAR  = (2UL << 30) |             (U32)(msg->id << 18);
  }  else  {                                               /* Extended ID     */
    CAN_MOx->MOAMR = (2UL << 30) | (1 << 29) | (U32)(msg->id);
    CAN_MOx->MOAR  = (2UL << 30) | (1 << 29) | (U32)(msg->id);
  }

  /* Setup data bytes                                                         */
  CAN_MOx->MODATAL = ((U32)msg->data[3] << 24) | 
                     ((U32)msg->data[2] << 16) | 
                     ((U32)msg->data[1] <<  8) | 
                     ((U32)msg->data[0]      ) ;
  CAN_MOx->MODATAH = ((U32)msg->data[7] << 24) | 
                     ((U32)msg->data[6] << 16) | 
                     ((U32)msg->data[5] <<  8) | 
                     ((U32)msg->data[4]      ) ;

  CAN_MOx->MOFCR   = (msg->len << 24) | /* DLC  = Data Length                 */
                     (1 << 21) |        /* RMM  = 1 for Remote Monitoring     */
                     (1 << 16) |        /* RXIE = 1 for DATA answer receive   */
                     (1 << 17) |        /* TXIE = 1 for DATA answer send      */
                     (0 <<  0) ;        /* MMC  = 0 -> Standard Message Object*/

                                        /* Update object bit mask             */
  mo_idx = ((msg->ch-1) >> 5) & 1;
  msk    = (1 << ((msg->ch-1) & 0x1F));
  get_mo[ctrl-1][mo_idx] &= ~msk;       /* It is not GET object               */
  set_mo[ctrl-1][mo_idx] |=  msk;       /* It is SET object                   */

  /* Activate reception of RTR                                                */
  CAN_MOx->MOCTR   = (1 <<  6) |        /* Clear RTSEL                        */
                     (1 <<  8) |        /* Clear TXRQ, auto set on RTR rcv    */
                     (1 << 19) |        /* Set NEWDAT                         */
                     (1 << 21) |        /* Set MSGVAL                         */
                     (1 << 23) |        /* Set RXEN                           */
                     (1 << 25) |        /* Set TXEN0                          */
                     (1 << 26) |        /* Set TXEN1                          */
                     (1 << 27) ;        /* Set DIR for RTR reception          */

  return CAN_OK;
}

CAN_ERROR CAN_hw_rx_object (U32 ctrl, U32 ch, U32 id, U32 object_para)  {
  CAN_MO_TypeDef *CAN_MOx = CAN_MO[ch-1];
  BOOL std;
  U8   mo_idx, msk;

  if (ctrl > MAX_CTRL) 
    return CAN_UNEXIST_CTRL_ERROR;

  if (ch > MAX_CH) 
    return CAN_UNEXIST_CH_ERROR;

  std = (object_para & FORMAT_TYPE) == STANDARD_TYPE;

  while (CAN->PANCTR & (3 << 8));       /* While BUSY or RBUSY are active     */

  CAN->PANCTR  = ((ctrl) << 24) |       /* Statically allocate obj to list    */
                 ((ch-1) << 16) |
                 ((0x02) <<  0) ;

  while (CAN->PANCTR & (3 << 8));       /* While BUSY or RBUSY are active     */

  /* Setup Message Object for reception                                       */

  CAN_MOx->MOFCR &= ~0x0F;              /* Message Mode Control = Std Object  */

  /* Setup the identifier information                                         */
  if (std)  {                                              /* Standard ID     */
    CAN_MOx->MOAMR =             (U32)(id << 18);
    CAN_MOx->MOAR  =             (U32)(id << 18);
  }  else  {                                               /* Extended ID     */
    CAN_MOx->MOAMR = (1 << 29) | (U32)(id);
    CAN_MOx->MOAR  = (1 << 29) | (U32)(id);
  }

                                        /* Update object bit mask             */
  mo_idx = ((ch-1) >> 5) & 1;
  msk    = (1 << ((ch-1) & 0x1F));
  tx_mo [ctrl-1][mo_idx] &= ~msk;       /* Clear TX so it is RX object        */
  set_mo[ctrl-1][mo_idx] &= ~msk;       /* It is not SET object               */
  get_mo[ctrl-1][mo_idx] &= ~msk;       /* It is not GET object               */

                                        /* Enable RX object to trigger INT_0n */
                                        /* where n is controller index        */
  CAN_MOx->MOIPR  &= ~0xFFFFFFFF;       /* Clear MOIPR                        */
  CAN_MOx->MOIPR  |= ((ctrl - 1)<< 14)| /* Bits 15..14 of MPN   in MOIPR      */
                     ((ch >  32)<< 13)| /* Bit  13     of MPN   in MOIPR      */
                     (((ch-1)&0x1F)<<8)|/* Bits 12.. 8 of MPN   in MOIPR      */
                     ((ctrl)         ); /* Bits 3 .. 0 of RXINP in MOIPR      */
  CAN_MOx->MOFCR  |=  1 << 16;          /* Receive Interrupt Enable           */

  /* Activate reception                                                       */
  CAN_MOx->MOCTR   = (1 <<  3) |        /* Clear NEWDAT                       */
                     (1 <<  6) |        /* Clear RTSEL                        */
                     (7 <<  8) |        /* Clear TXRQ, TXEN0, TXEN1           */
                     (1 << 11) |        /* Clear DIR                          */
                     (1 << 21) |        /* Set MSGVAL                         */
                     (1 << 23) ;        /* Set RXEN                           */

  return CAN_OK;
}
